# Sistemas-Operativos

./: .gitattributes  .gitignore  README.md
Tarea-2/: Cargo.toml  README.md
Tarea-2/src/: factory.rs  main.rs  product.rs  scheduler.rs
http_server/: Cargo.toml  Manual.md  README.md  generate_large_datasets.sh  generate_test_files.sh  test_all_endpoints.sh  test_server.ps1  verificar_coverage.sh
http_server/data/: data.txt  jobs.json  jobs_test_87091.json  numbers.txt  stress_test.txt  test.txt  test_compress.txt  test_grep.txt  test_hash.txt  test_numbers.txt  test_text.txt
http_server/src/: config.rs  lib.rs  main.rs
http_server/src/commands/: basic.rs  cpu_bound.rs  io_bound.rs  mod.rs
http_server/src/http/: mod.rs  request.rs  response.rs  status.rs
http_server/src/jobs/: handlers.rs  job.rs  manager.rs  mod.rs  queue.rs  storage.rs  types.rs
http_server/src/metrics/: collector.rs  mod.rs
http_server/src/router/: mod.rs
http_server/src/server/: mod.rs  tcp.rs
http_server/stress_results/: report_high_20251027_213116.json  report_high_20251027_213633.json  report_low_20251027_210438.json  report_low_20251027_213621.json  report_medium_20251027_213102.json  report_medium_20251027_213627.json
http_server/test_results/: profile1_fibonacci.txt  profile1_reverse.txt  profile1_status.txt  profile2_fibonacci.txt  profile2_hash.txt  profile2_isprime.txt  profile3_factor.txt  profile3_isprime_large.txt  profile3_pi.txt
http_server/tests/: integration_test.rs  quick_test.sh  stress_test.sh
